# csml_project

./: .gitignore
code/: pyproject.toml
code/config/: config.yaml
code/notebooks/: 01_eda.ipynb  03_modeling.ipynb
code/scripts/: 01_fetch_data.py  02_build_features.py  03_train_models.py  04_evaluate.py  05_generate_figures.py
code/src/data/: exogenous.py  kalshi.py  polymarket.py  preprocessing.py
code/src/evaluation/: metrics.py  statistical_tests.py  trading_sim.py
code/src/features/: builder.py  endogenous.py  exogenous.py
code/src/models/: baselines.py  lstm.py  registry.py  tft.py  trees.py
code/src/tuning/: optuna_search.py
code/src/visualization/: plots.py  tables.py
writing/: bib.bib
writing/porposal/: proposal.tex
