[project]
name = "pm-forecasting"
version = "0.1.0"
description = "Forecasting Prediction Market Prices Using Ensemble and Deep Learning Models"
requires-python = ">=3.11"
dependencies = [
    # Data
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=15.0",
    "requests>=2.31",
    "aiohttp>=3.9",
    "web3>=6.0",

    # Features
    "ta>=0.11",
    "pytrends>=4.9",
    "vaderSentiment>=3.3",
    "textblob>=0.18",

    # ML
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "optuna>=3.6",

    # Deep Learning
    "torch>=2.3",
    "pytorch-lightning>=2.2",
    "pytorch-forecasting>=1.1",

    # Evaluation
    "arch>=7.0",
    "statsmodels>=0.14",

    # Visualization
    "matplotlib>=3.9",
    "seaborn>=0.13",

    # Experiment tracking
    "wandb>=0.17",

    # Config
    "hydra-core>=1.3",
    "omegaconf>=2.3",

    # Notebooks
    "jupyterlab>=4.2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
